--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2d2bad0c-d36f-48e8-8e3b-7a6031045d4f",
    "metadata": {},
    "outputs": [
@@ -12,21 +12,21 @@
        "Ising_impurity (generic function with 1 method)"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "include(\"util.jl\")\n",
     "#=\n",
     "    This is an implementation of the structure factor calculation based on PHYSICAL REVIEW B 105, 195140 (2022)\n",
+    "    https://journals.aps.org/prb/pdf/10.1103/PhysRevB.105.195140\n",
     "=#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "8a2a2855-a43b-4bfc-b1e1-ebfcd932adcf",
    "metadata": {},
    "outputs": [
@@ -40,9 +40,8 @@
        "│   ⋮\n"
       ]
      },
-     "execution_count": 58,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -860,7 +859,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.2",
+   "display_name": "Julia 1.10.4",
    "language": "julia",
    "name": "julia-1.10"
   },
@@ -868,7 +867,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.2"
+   "version": "1.10.4"
   }
  },
  "nbformat": 4,
